# mermaid-linter

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/ast/: common.rs  mod.rs  typed.rs
src/config/: mod.rs
src/detector/: detectors.rs  mod.rs
src/diagnostic/: codes.rs  mod.rs
src/diagrams/: mod.rs
src/diagrams/class/: lexer.rs  mod.rs  parser.rs
src/diagrams/er/: lexer.rs  mod.rs  parser.rs
src/diagrams/flowchart/: lexer.rs  mod.rs  parser.rs
src/diagrams/gantt/: lexer.rs  mod.rs  parser.rs
src/diagrams/gitgraph/: lexer.rs  mod.rs  parser.rs
src/diagrams/journey/: lexer.rs  mod.rs  parser.rs
src/diagrams/pie/: lexer.rs  mod.rs  parser.rs
src/diagrams/sequence/: lexer.rs  mod.rs  parser.rs
src/diagrams/state/: lexer.rs  mod.rs  parser.rs
src/parser/: error.rs  lexer.rs  mod.rs  traits.rs
src/preprocess/: comments.rs  directive.rs  frontmatter.rs  mod.rs  normalize.rs  preprocessor.rs
tests/: golden_tests.rs  integration_tests.rs
tests/fixtures/class/: relationships.mmd  simple.mmd
tests/fixtures/flowchart/: simple.mmd  styling.mmd  subgraph.mmd
tests/fixtures/sequence/: control_flow.mmd  notes.mmd
tests/fixtures/state/: composite.mmd
tests/golden/: mod.rs
tests/golden/class/: relationships.json
tests/golden/flowchart/: simple.json
tests/golden/sequence/: control_flow.json
tests/golden/state/: composite.json
tests/integration/: class_tests.rs  detector_tests.rs  er_tests.rs  flowchart_tests.rs  gantt_tests.rs  journey_tests.rs  mod.rs  pie_tests.rs  preprocessing_tests.rs  sequence_tests.rs  state_tests.rs
